@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Cairo
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cairo/ChangeLog,v 1.49 2008/09/10 14:11:10 tove Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cairo/ChangeLog,v 1.50 2009/06/07 18:36:52 tove Exp $
+
+*Cairo-1.06.1 (07 Jun 2009)
+
+  07 Jun 2009; Torsten Veller <tove@gentoo.org> +Cairo-1.06.1.ebuild:
+  Version bump
 
   10 Sep 2008; Torsten Veller <tove@gentoo.org> -Cairo-1.02.2.ebuild,
   -Cairo-1.04.0.ebuild, -Cairo-1.04.1.ebuild, -Cairo-1.04.5.ebuild:
